--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@supabase/supabase-js": "^2.36.0",
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
+		"highlight.js": "^11.8.0",
 		"openai": "^4.10.0",
 		"radix-icons-svelte": "^1.2.1",
 		"tailwind-merge": "^1.14.0",
