--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.10.3",
 		"@supabase/supabase-js": "^2.36.0",
+		"@vercel/analytics": "^1.0.2",
 		"bits-ui": "^0.5.7",
 		"clsx": "^2.0.0",
 		"highlight.js": "^11.8.0",
